# winpoll

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
winpoll/: __init__.py  __init__.pyi  test_winpoll.py
winpoll/_util/: __init__.py  misc.py  misc.pyi  select_extra.py  select_extra.pyi  systeminfo.py  systeminfo.pyi  wintypes_extra.py  wintypes_extra.pyi
