[project]
name = "winpoll"
version = "0.20287.0"
requires-python = ">= 3.6"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Networking",
]

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]
